--- a/stylesheet.css
+++ b/stylesheet.css
@@ -209,6 +209,14 @@ h1
   z-index: 0;
 } 
 
+.imgd
+{
+  height: 15vh;
+  width: 80%;
+  float: none;
+  z-index: 0;
+}
+
 .info
 {
   background-image: url("Images/puerto2.png");
@@ -306,5 +314,43 @@ footer
   background-attachment: fixed;
   background-size: cover;
   height: 4vh;
+}
+
+/* Pop-Up */
+.ventanaPopUp {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%; 
+  height: 100%; 
+  overflow: auto;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0,0.4);
+  overflow: hidden;
+}
+
+.infoPopUp {
+  border-radius: 7px;
+  background-color: #edebeb;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 50%;
+}
+
+.cerrarPopUp {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.cerrarPopUp:hover,
+.cerrarPopUp:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
 }
 
